<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/description_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_missing"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/item_barcode"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_bar_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/item_barcode_missing"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/item_category"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/item_category_missing"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/item_total_count"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/item_total_count_missing"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/item_packaging"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_packaging"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/item_packaging_missing"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/location_exp_date"
                    android:textAlignment="textStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_shortest_exp_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/location_exp_date_missing"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_item_location_details_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_box"
        android:layout_marginTop="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add_circle_black_24dp" />

</RelativeLayout>