<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="85"
            android:text="@string/item_name_missing"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/list_item_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="15"
            android:text="@string/item_total_count_missing"
            android:textAlignment="center"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100">

        <TextView
            android:id="@+id/list_item_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="33"
            android:text="@string/item_category_missing"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/list_item_packaging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="33"
            android:text="@string/item_packaging_missing"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/list_item_exp_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="33"
            android:text="@string/location_exp_date_missing"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>