<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditItemActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/edit_item_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_barcode"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_item_bar_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_category"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_packaging"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_item_packaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <Button
                android:id="@+id/edit_save_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/save" />

            <Button
                android:id="@+id/edit_save_and_go_location_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/item_save_and_add_location" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
