<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_location_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/list_location_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/location_count_missing"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="55"
        android:text="@string/location_name_missing"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_location_exp_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="35"
        android:text="@string/location_exp_date_missing"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>