<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditLocationDetailsActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/edit_location_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_name" />

        <Spinner
            android:id="@+id/spinner_select_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_count" />

        <EditText
            android:id="@+id/edit_location_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_exp_date" />

        <DatePicker
            android:id="@+id/date_picker_exp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/button_save_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</RelativeLayout>
